--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 .titlebar {
 	text-align: center;
 	background-color: #00ADB5;
-	width: 85%;
+	width: 85vw;
 	height: 3.5vw;
 	margin-left: auto;
 	margin-right: auto;
@@ -40,7 +40,7 @@ h1{
 }
 
 .footer {
-	width: 85%;
+	width: 85vw;
 	margin: auto;
 	font-size: 1.5vw;
 	position: relative;
@@ -53,5 +53,7 @@ a {
 .lastcount{
 	position: relative;
 	padding-top: 1%;
+	font-size: 2vw;
+	padding-bottom: 1vh;
 }
 
